--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,18 +34,14 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
-excludes=
-file.reference.jakarta.inject.jar=/home/hiago/app/glassfish5/glassfish/modules/jakarta.inject.jar
-file.reference.jakarta.interceptor-api.jar=/home/hiago/app/glassfish5/glassfish/modules/jakarta.interceptor-api.jar
-file.reference.jakarta.servlet-api.jar=../glassfish5/glassfish/modules/jakarta.servlet-api.jar
-file.reference.jakarta.servlet.jsp-api.jar=/home/hiago/app/glassfish5/glassfish/modules/jakarta.servlet.jsp-api.jar
-file.reference.jakarta.transaction-api.jar=/home/hiago/app/glassfish5/glassfish/modules/jakarta.transaction-api.jar
+file.reference.jakarta.inject.jar-1=../glassfish5/glassfish/modules/jakarta.inject.jar
+file.reference.jakarta.servlet-api.jar-1=../glassfish5/glassfish/modules/jakarta.servlet-api.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=1.8-web
-j2ee.platform.classpath=${j2ee.server.home}/modules/endorsed/grizzly-npn-bootstrap.jar:${j2ee.server.home}/modules/endorsed/jakarta.annotation-api.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/endorsed/jakarta.xml.bind-api.jar:${j2ee.server.home}/modules/javax.batch-api.jar:${j2ee.server.home}/modules/weld-osgi-bundle.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/bean-validator.jar:${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/cdi-api.jar:${j2ee.server.middleware}/mq/lib/jaxm-api.jar
+j2ee.platform.classpath=${j2ee.server.home}/modules/endorsed/grizzly-npn-bootstrap.jar:${j2ee.server.home}/modules/endorsed/jakarta.annotation-api.jar:${j2ee.server.home}/modules/endorsed/jakarta.xml.bind-api.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/bean-validator.jar:${j2ee.server.home}/modules/cdi-api.jar:${j2ee.server.home}/modules/javax.batch-api.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/weld-osgi-bundle.jar:${j2ee.server.middleware}/mq/lib/jaxm-api.jar
 j2ee.platform.embeddableejb.classpath=${j2ee.server.home}/lib/embedded/glassfish-embedded-static-shell.jar
 j2ee.platform.wscompile.classpath=${j2ee.server.home}/modules/webservices-osgi.jar
 j2ee.platform.wsgen.classpath=${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/jaxb-osgi.jar
@@ -54,14 +50,11 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv5ee8
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jakarta.servlet-api.jar}:\
     ${libs.eclipselink.classpath}:\
     ${libs.PostgreSQLDriver.classpath}:\
-    ${file.reference.jakarta.inject.jar}:\
-    ${file.reference.jakarta.interceptor-api.jar}:\
-    ${file.reference.jakarta.transaction-api.jar}:\
-    ${file.reference.jakarta.servlet.jsp-api.jar}
-# Space-separated list of extra javac options
+    \# Space-separated list of extra javac options:\
+    ${file.reference.jakarta.servlet-api.jar-1}:\
+    ${file.reference.jakarta.inject.jar-1}
 javac.compilerargs=
 javac.debug=true
 javac.deprecation=false
