--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,8 +34,10 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
+excludes=
 file.reference.jakarta.inject.jar-1=../glassfish5/glassfish/modules/jakarta.inject.jar
 file.reference.jakarta.servlet-api.jar-1=../glassfish5/glassfish/modules/jakarta.servlet-api.jar
+file.reference.jakarta.servlet.jsp-api.jar-1=../glassfish5/glassfish/modules/jakarta.servlet.jsp-api.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -54,7 +56,8 @@ javac.classpath=\
     ${libs.PostgreSQLDriver.classpath}:\
     \# Space-separated list of extra javac options:\
     ${file.reference.jakarta.servlet-api.jar-1}:\
-    ${file.reference.jakarta.inject.jar-1}
+    ${file.reference.jakarta.inject.jar-1}:\
+    ${file.reference.jakarta.servlet.jsp-api.jar-1}
 javac.compilerargs=
 javac.debug=true
 javac.deprecation=false
