JSTL pronto. DAOImpl e telas das entidades Autor, Cliente, Livro e Midia feitas.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,7 +26,7 @@ conf.dir=${source.root}/conf
 debug.classpath=${build.classes.dir}:${javac.classpath}
 debug.test.classpath=\
     ${run.test.classpath}
-display.browser=false
+display.browser=true
 # Files to be excluded from distribution war
 dist.archive.excludes=
 dist.dir=dist
@@ -99,6 +99,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=livraria.war
+war.name=livraria_V2.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
