CDI, JPA, JSP e JSTL aplicados em Funcionario

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -99,6 +99,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=livraria_V2.war
+war.name=livraria-v3.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
